--- a/example/pom.xml
+++ b/example/pom.xml
@@ -4,7 +4,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.msentic.example</groupId>
    <artifactId>testciproject</artifactId>
-   <version>1.0.0-SNAPSHOT</version>
+   <version>1.0.0</version>
    <name>Maven Deploy Example</name>
    <description>Project to demonstrate Maven deploy plugin</description>
    <url>https://github.com/msentic/TestCIProject</url>
@@ -17,7 +17,8 @@
       <connection>scm:git:https://github.com/msentic/TestCIProject.git</connection>
       <url>https://github.com/msentic/TestCIProject</url>
       <developerConnection>scm:git:https://github.com/msentic/TestCIProject.git</developerConnection>
-   </scm>
+     <tag>v1.0.0</tag>
+  </scm>
    
    <distributionManagement>
       <repository>
