--- a/example/pom.xml
+++ b/example/pom.xml
@@ -4,7 +4,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.msentic.example</groupId>
    <artifactId>testciproject</artifactId>
-   <version>1.0.0</version>
+   <version>1.0.0-SNAPSHOT</version>
    <name>Maven Deploy Example</name>
    <description>Project to demonstrate Maven deploy plugin</description>
    <url>https://github.com/msentic/TestCIProject</url>
@@ -17,7 +17,6 @@
       <connection>scm:git:https://github.com/msentic/TestCIProject.git</connection>
       <url>https://github.com/msentic/TestCIProject</url>
       <developerConnection>scm:git:https://github.com/msentic/TestCIProject.git</developerConnection>
-    <tag>v1.0.0</tag>
   </scm>
    
    <distributionManagement>
@@ -29,7 +28,7 @@
       <snapshotRepository>
          <id>nexus</id>
          <name>snapshots</name>
-         <url>http://192.168.153.132:8081/repository/maven-releases/</url>
+         <url>http://192.168.153.132:8081/repository/maven-snapshots/</url>
       </snapshotRepository>
    </distributionManagement>
    
@@ -44,6 +43,7 @@
                   <phase>deploy</phase>
                   <goals>
                      <goal>deploy</goal>
+                     <!-- <goal>deploy-file</goal> -->
                   </goals>
                   <configuration>
                      <!-- <file>target/${project.artifactId}-${project.version}.jar</file>
